# drumvisualizations

./: .gitignore  AUTO_TRIGGER_GUIDE.md  App.tsx  BUILD_DIRECTIONS.md  BUILD_INSTRUCTIONS.md  DEVELOPMENT_SERVER.md  DrumOverlay.tsx  README.md  README_HOTKEY.md  TECHNICAL_SPECS.md  analyze_drums.py  auto_trigger.py  auto_trigger_requirements.txt  create_hotkey_trigger.ahk  drum-data.json  index.html  install_autohotkey.ps1  install_autohotkey_v1.ps1  install_hotkey.bat  launch.json  logo-overlay.js  overlay.html  package-lock.json  package.json  particles.js  process_track.py  run_analysis_and_server.bat  run_analysis_and_server.sh  run_dev.bat  run_dev.sh  run_frontend_only.bat  run_full_process.bat  run_full_process.ps1  server.py  start_auto_trigger.bat  start_auto_trigger.sh  tasks.json  test_demucs_import.py  test_hotkey.bat  uninstall_hotkey.bat
drum-logo-overlay/: analyze_drums.py  drum-logo-overlay-directive.md  extract_stems.sh
drum-logo-overlay/src/: drum-data.json  index.html
drum-overlay-system/audio-workspace/: process.bat  process_track.py
drum-overlay-system/backend/: main.py  run_separation.py  separation_pipeline.py
drum-overlay-system/frontend/: AUDIO_INTEGRATION.md  DEVELOPMENT.md  ELECTRON_README.md  EXECUTABLE_BUILD_SUMMARY.md  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  build-electron.js  build-executable.bat  build-executable.sh  (+6 more)
drum-overlay-system/frontend/src-tauri/: Cargo.toml
drum-overlay-system/frontend/src-tauri/src/: main.rs
midi/: drums.mid
scripts/: analyze_drums.py  extract_stems.sh
src/: drum-data.json
(+4 files in other folders)
